--- a/css/responsive.css
+++ b/css/responsive.css
@@ -640,7 +640,7 @@
   }
 
   #menu section.menu3 .green-left {
-    width: 340px;
+    width: auto;
     padding: 0;
   }
 
@@ -665,6 +665,7 @@
   #menu section.menu3 .green-left .green-box {
     width: 360px;
     padding: 30px 0;
+    margin: 0 auto;
 
   }
 
